--- a/react-todo/package.json
+++ b/react-todo/package.json
@@ -24,6 +24,7 @@
     "vite": "^5.0.0"
   },
   "jest": {
-    "testEnvironment": "jsdom"
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"]
   }
 }
